--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -29,6 +29,11 @@
             top: 4px;
             font-size: 16px;
         }
+        @include laptopS {
+            left: 54px;
+            top: 3px;
+            font-size: 14px;
+        }
     }
     &__detailsWrapper {
         width: 50%;
@@ -92,6 +97,9 @@
         }
         @include laptopM {
             width: 16%;
+        }
+        @include laptopS {
+            width: 23%;
         }
     }
     &__willingnessBarWrapper {
@@ -223,6 +231,10 @@
             padding: 0px 18px;
             box-shadow: -22px 0 #f7dab4 inset;
         }
+        @include laptopS {
+            width: 75%;
+            padding: 0px 12px;
+        }
     }
     &__general {
         display: flex;
@@ -254,6 +266,9 @@
         @include laptopM {
             margin-top: 8px;
            margin-right: 35px;
+        }
+        @include laptopS {
+            margin-right: 20px;
         }
     }
 
@@ -355,10 +370,16 @@
     &::before {
         border-radius: 15px 0 0 15px;
         left: 21px;
+        @include laptopS {
+            before: 16px;
+        }
     }
     &::after {
         border-radius: 0 15px 15px 0;
         right: 21px;
+        @include laptopS {
+            right: 16px;
+        }
     }
     @include desktopS {
         height: 21px;
