--- a/sass/elements/game/_fight.scss
+++ b/sass/elements/game/_fight.scss
@@ -24,19 +24,23 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        &-monster{
+        &-monster {
             position: relative;
         }
         @include desktopM {
             width: 310px;
         }
-        @include desktopS{
+        @include desktopS {
             width: 280px;
             border-radius: 16px;
             padding: 6px;
         }
         @include laptopM {
             width: 247px;
+        }
+        @include laptopS {
+            width: 203px;
+            border-radius: 10px;
         }
     }
     &__characterImg {
@@ -57,7 +61,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        @include desktopS{
+        @include desktopS {
             border: 4px solid $color-gray_dark;
             height: 36px;
         }
@@ -119,14 +123,15 @@
         width: 200px;
         height: 200px;
         transform: scale(0);
-        &-an{
-           animation: 1.5s an__sword_attack forwards;
+        &-an {
+            animation: 1.5s an__sword_attack forwards;
         }
-       @include laptopM {
-           top: 120px;
-           width: 170px;
-           height: 170px;
-       }
+        @include laptopM {
+            top: 120px;
+            width: 170px;
+            height: 170px;
+        }
+       
     }
     &__explosion {
         transform: scale(0);
@@ -135,13 +140,12 @@
         width: 80%;
         height: auto;
         object-fit: cover;
-        &-an{
-            animation: 0.5s 1s  an__attack_explosion forwards, 0.5s 1.5s  an__attack_explosion_shrink  forwards; 
+        &-an {
+            animation: 0.5s 1s an__attack_explosion forwards, 0.5s 1.5s an__attack_explosion_shrink forwards;
         }
         @include desktopM {
             width: 60%;
         }
-       
     }
     &__sword {
         z-index: 0;
@@ -151,18 +155,15 @@
         width: 100%;
         height: auto;
         object-fit: cover;
-        &-an{
+        &-an {
             animation: 0.5s 1s an__sword_attack_shrink forwards;
         }
-      
     }
 
-
-    &__summaryWrapper{
+    &__summaryWrapper {
         width: 100%;
-         
     }
-    &__summary{
+    &__summary {
         transform: scale(0);
         margin: 0 auto;
         border: 5px solid $color-gold;
@@ -177,11 +178,12 @@
         padding: 10px;
         transition: 0.3s;
         animation: 1s an__summary_scale forwards;
-        &:hover{
+        &:hover {
             backdrop-filter: blur(4px);
         }
-        @include desktopS{
+        @include desktopS {
             padding: 6px;
+            border-radius: 16px;
         }
         @include laptopL {
             width: 268px;
@@ -189,35 +191,37 @@
         @include laptopM {
             width: 228px;
         }
+        @include laptopS {
+            border-radius: 10px;
+        }
     }
-    &__summaryTitle{
-      font-size: 1.125rem;
-      font-weight: bold;
-      letter-spacing: 0.063rem;
-      word-spacing: 0.125rem;
-      color: $color-white;
-      text-align: center;
+    &__summaryTitle {
+        font-size: 1.125rem;
+        font-weight: bold;
+        letter-spacing: 0.063rem;
+        word-spacing: 0.125rem;
+        color: $color-white;
+        text-align: center;
     }
-    &__summaryPayout{
+    &__summaryPayout {
         margin: 10px 0;
-        div{
+        div {
             display: flex;
             align-items: center;
             margin-bottom: 0.438rem;
         }
-        img{
+        img {
             width: 2rem;
             height: auto;
             object-fit: cover;
             margin-right: 0.5rem;
         }
-        strong{
+        strong {
             font-weight: 600;
             font-size: 1.125rem;
-            
         }
     }
-    &__summaryBtn{
+    &__summaryBtn {
         width: 100%;
         font-size: 1.25rem;
         color: $color-white;
@@ -227,61 +231,58 @@
         border: none;
         outline: none;
         transition: 0.2s;
-        &-green{
+        &-green {
             background: $color-green;
         }
-        &-red{
+        &-red {
             background: $color-red;
         }
-        &:focus, &:hover{
+        &:focus,
+        &:hover {
             cursor: pointer;
             letter-spacing: 0.125rem;
         }
     }
-    &__failed{
+    &__failed {
         font-size: 2.063rem;
         margin-bottom: 0.688rem;
         font-weight: bold;
         letter-spacing: 0.063rem;
         word-spacing: 0.125rem;
-        text-shadow: 0.125rem 0.125rem $color-red;  
+        text-shadow: 0.125rem 0.125rem $color-red;
     }
 }
 
-
-
-
-#fight_container{
+#fight_container {
     width: 100%;
 }
 
-@keyframes an__summary_scale{
-    100%{
+@keyframes an__summary_scale {
+    100% {
         transform: scale(100%);
     }
 }
 
-
-
-
-.monster{
- 
-    &-an{
+.monster {
+    &-an {
         animation: 0.8s an__monster_attack forwards;
         @include desktopM {
-            animation: 0.8s  an__monster_attack-desktopM forwards;
+            animation: 0.8s an__monster_attack-desktopM forwards;
         }
         @include desktopS {
-            animation: 0.8s  an__monster_attack-desktopS forwards;
+            animation: 0.8s an__monster_attack-desktopS forwards;
         }
         @include laptopL {
-            animation: 0.8s  an__monster_attack-laptopL forwards;
+            animation: 0.8s an__monster_attack-laptopL forwards;
         }
         @include laptopM {
-            animation: 0.8s  an__monster_attack-laptopM forwards;
+            animation: 0.8s an__monster_attack-laptopM forwards;
+        }
+        @include laptopS {
+            animation: 0.8s an__monster_attack-laptopS forwards;
         }
     }
-    &__explosionWrapper{
+    &__explosionWrapper {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -294,23 +295,25 @@
             width: 170px;
             height: 170px;
         }
+        @include laptopS {
+            width: 150px;
+            height: 150px;
+        }
     }
-    &__explosionImg{
+    &__explosionImg {
         width: 70%;
         height: auto;
         object-fit: cover;
         transform: scale(0%);
-        &-an{
-            animation: 1s 0.8s an__monster_explosion_grow ;
+        &-an {
+            animation: 1s 0.8s an__monster_explosion_grow;
         }
-        
     }
 }
 
-.fight__sword-an{
-   @include desktopM{
-     
-   } 
+.fight__sword-an {
+    @include desktopM {
+    }
 }
 .fight__weaponWrapper {
     @include desktopM {
@@ -318,11 +321,11 @@
         height: 170px;
         left: 190px;
     }
-    &-an{
-        @include desktopM{
+    &-an {
+        @include desktopM {
             animation: 1.5s an__sword_attack-desktopM forwards;
         }
-        @include desktopS{
+        @include desktopS {
             animation: 1.5s an__sword_attack-desktopS forwards;
         }
         @include laptopL {
@@ -332,102 +335,110 @@
             animation: 1.5s an__sword_attack-laptopM forwards;
         }
     }
-
+    @include laptopS {
+        top: 70px;
+        width: 155px;
+        height: 175px;
+        left: 100px;
+    }
 }
 // monster attack
 @keyframes an__monster_explosion_grow {
-    50%{
+    50% {
         transform: scale(100%);
     }
-    100%{
+    100% {
         transform: scale(0%);
     }
 }
 
 // moving monster
 @keyframes an__monster_attack {
-    100%{
+    100% {
         transform: translateX(-630px);
-       
     }
 }
-@keyframes an__monster_attack-desktopM{
+@keyframes an__monster_attack-desktopM {
     100% {
         transform: translateX(-585px);
     }
 }
-@keyframes an__monster_attack-desktopS{
+@keyframes an__monster_attack-desktopS {
     100% {
         transform: translateX(-520px);
     }
 }
-@keyframes an__monster_attack-laptopL{
+@keyframes an__monster_attack-laptopL {
     100% {
         transform: translateX(-440px);
     }
 }
-@keyframes an__monster_attack-laptopM{
+@keyframes an__monster_attack-laptopM {
     100% {
         transform: translateX(-460px);
+    }
+}
+@keyframes an__monster_attack-laptopS {
+    100% {
+        transform: translateX(-330px);
     }
 }
 
 // user attack
 @keyframes an__sword_attack {
-    30%{
+    30% {
         transform: scale(50%);
     }
     100% {
-        transform: translate(830px, 0%)  scale(100%);
+        transform: translate(830px, 0%) scale(100%);
     }
 }
 @keyframes an__sword_attack-desktopM {
-    30%{
+    30% {
         transform: scale(50%);
     }
     100% {
-        transform: translate(790px, 0%)  scale(100%);
+        transform: translate(790px, 0%) scale(100%);
     }
 }
 @keyframes an__sword_attack-desktopS {
-    30%{
+    30% {
         transform: scale(50%);
     }
     100% {
-        transform: translate(640px, 0%)  scale(100%);
+        transform: translate(640px, 0%) scale(100%);
     }
 }
 @keyframes an__sword_attack-laptopL {
-    30%{
+    30% {
         transform: scale(50%);
     }
     100% {
-        transform: translate(540px, 0%)  scale(100%);
+        transform: translate(540px, 0%) scale(100%);
     }
 }
 
 @keyframes an__sword_attack-laptopM {
-    30%{
+    30% {
         transform: scale(50%);
     }
     100% {
-        transform: translate(540px, 0%)  scale(100%);
+        transform: translate(540px, 0%) scale(100%);
     }
 }
 
-
 @keyframes an__attack_explosion {
     100% {
-        transform:  scale(130%);
+        transform: scale(130%);
     }
 }
 @keyframes an__attack_explosion_shrink {
     100% {
-        transform:  scale(0%);
+        transform: scale(0%);
     }
 }
 @keyframes an__sword_attack_shrink {
     100% {
-        transform:  scale(0%);
+        transform: scale(0%);
     }
 }
