--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,4 @@
 @import "./elements/game/fight";
 @import "./elements/game/chat";
 @import './elements/game/loading';
+@import './elements/game/labelPositions';
