media - ipadPro  - toogling nav  menu

--- a/sass/elements/game/_labelPositions.scss
+++ b/sass/elements/game/_labelPositions.scss
@@ -589,6 +589,11 @@
                 bottom: -22px;
             }
         }
+        @include laptopS {
+            &::after {
+                bottom: -17px;
+            }
+        }
     }
 }
 
