--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -28,11 +28,21 @@
         min-height: 600px;
         max-height: 768px;
     }
+    @include ipadPro {
+        width: 100%;
+        height: 100vh;
+        max-height: none;
+        position: relative;
+    }
 }
 .game__contentContainer{
     width: 80%;
     height: 100%;
     position: relative;
+    @include ipadPro {
+        z-index: 2;
+        width: 100%;
+    }
 }
 #game__view {
     overflow: hidden;
