--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -4,6 +4,11 @@
     background: $color-gray_dark;
     font-size: 2.5rem;
     overflow: auto;
+    @include ipadPro {
+        z-index: 3;
+        position: absolute;
+        display: none;
+    }
     ::-webkit-scrollbar{
         width: 0;
     }
@@ -28,6 +33,13 @@
             height: 39px;
             font-size: 26px;
             margin-top: 5px;
+        }
+        @include ipadPro {
+            height: 100%;
+            font-size: 29px;
+            &:first-child {
+                display: none;
+            }
         }
     }
     &__list {
@@ -182,5 +194,27 @@
                 
             }
         }
+    }
+}
+.mobileNav{
+    
+    width: 100%;
+    height: 70px;
+    background: $color-gray_dark;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    padding: 7px 16px;
+    z-index: 4;
+    h1{
+       margin-left: 30px;
+    }
+    &__icon{
+        height: 100%;
+        width: auto;
+        object-fit: cover;
+    }
+    @include ipadPro {
+        display: flex;
     }
 }
