--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -203,7 +203,7 @@
     background: $color-gray_dark;
     position: fixed;
     bottom: 0;
-    display: flex;
+    display: none;
     padding: 7px 16px;
     z-index: 4;
     h1{
