--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -62,6 +62,9 @@
             @include laptopS {
                 height: 330px;
             }
+            @include ipadPro {
+                height: 407px;
+            }
         }
     }
 
@@ -657,6 +660,11 @@
     }
     &__backpackRow {
         display: flex;
+        &:last-child{
+            @include ipadPro {
+             
+            }
+        }
     }
     &__backpackItem {
         display: flex;
@@ -696,6 +704,12 @@
             border-top: 2px solid $color-gray_dark;
             width: 78px;
             height: 78px;
+        }
+        @include ipadPro {
+            border-left: 4px solid $color-gray_dark;
+            border-top: 4px solid $color-gray_dark;
+            width: 95px;
+            height: 95px;
         }
     }
 
@@ -848,13 +862,28 @@
         @include laptopS {
             border-bottom: 2px solid $color-gray_dark;
         }
+        @include ipadPro {
+            border-bottom: 4px solid $color-gray_dark;
+        }
     }
     &:last-child .profile__backpackItem:last-child {
         border-right: 3px solid $color-gray_dark;
         @include laptopS {
             border-right: 2px solid $color-gray_dark;
         }
+
     }
+    @include ipadPro {
+        &:first-child .profile__backpackItem:last-child {
+            border-right: 4px solid $color-gray_dark;
+        
+        }
+        &:last-child .profile__backpackItem:last-child {
+            border-right: 4px solid $color-gray_dark;
+        
+        }
+    }
+    
 }
 
 .profile__stats {
@@ -990,7 +1019,18 @@
     color: $color-white !important;
 }
 
-
+.profile {
+    &__mobileTreasureChest{
+        display: none;
+        width: 200px;
+        height: auto;
+        object-fit: cover;
+        margin: 0 auto;
+        @include ipadPro {
+            display: block;
+        }
+    }
+}
 
 .searchedUser {
     &__statsWrapper {
