--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -17,6 +17,7 @@
         }
         @include ipadPro {
             width: 50%;
+            position: relative;
             height: 100%;
             flex-direction: column;
             justify-content: flex-end;
@@ -80,7 +81,6 @@
                     height: 97%;
                 }
             }
-            
         }
         @include ipadPro {
             width: 50%;
@@ -161,14 +161,12 @@
                 height: 140%;
             }
             @include ipadPro {
-              
                 height: 98%;
             }
         }
 
         &-wizard {
             img {
-               
                 width: 45%;
             }
         }
@@ -182,6 +180,11 @@
         }
         @include laptopM {
             width: 290px;
+        }
+        @include ipadPro {
+            width: 380px;
+            position: absolute;
+            top: 0;
         }
     }
     &__itemInfo {
@@ -224,6 +227,158 @@
                 right: -118px;
                 top: 0;
                 transform: rotate(-8deg);
+            }
+            @include ipadPro {
+                width: 110%;
+                height: 110%;
+                left: -6%;
+                top: -5%;
+                transform: none;
+
+                clip-path: polygon(
+                    0% 0%,
+                    2% 3%,
+                    4% 0%,
+                    7% 5%,
+                    9% 0%,
+                    11% 3%,
+                    14% 0%,
+                    16% 3%,
+                    19% 0%,
+                    21% 2%,
+                    24% 0%,
+                    28% 4%,
+                    31% 0%,
+                    34% 4%,
+                    36% 0%,
+                    39% 4%,
+                    41% 0%,
+                    43% 5%,
+                    47% 0%,
+                    49% 4%,
+                    54% 0%,
+                    57% 3%,
+                    60% 0%,
+                    64% 3%,
+                    65% 0%,
+                    69% 2%,
+                    71% 0%,
+                    73% 3%,
+                    77% 0%,
+                    79% 3%,
+                    83% 0%,
+                    86% 3%,
+                    89% 0%,
+                    91% 4%,
+                    94% 0%,
+                    95% 4%,
+                    99% 0%,
+                    98% 4%,
+                    100% 6%,
+                    99% 10%,
+                    100% 13%,
+                    99% 18%,
+                    98% 23%,
+                    100% 25%,
+                    98% 30%,
+                    100% 36%,
+                    98% 41%,
+                    100% 44%,
+                    98% 48%,
+                    100% 51%,
+                    98% 53%,
+                    100% 55%,
+                    98% 58%,
+                    100% 60%,
+                    98% 63%,
+                    100% 65%,
+                    98% 68%,
+                    100% 70%,
+                    98% 72%,
+                    100% 75%,
+                    98% 76%,
+                    100% 80%,
+                    98% 82%,
+                    100% 86%,
+                    100% 88%,
+                    98% 89%,
+                    100% 92%,
+                    99% 93%,
+                    100% 96%,
+                    98% 96%,
+                    98% 100%,
+                    95% 98%,
+                    93% 100%,
+                    90% 99%,
+                    88% 100%,
+                    85% 98%,
+                    82% 100%,
+                    79% 98%,
+                    77% 100%,
+                    73% 98%,
+                    72% 100%,
+                    66% 97%,
+                    65% 100%,
+                    61% 98%,
+                    59% 100%,
+                    55% 98%,
+                    53% 100%,
+                    51% 98%,
+                    50% 100%,
+                    46% 97%,
+                    44% 100%,
+                    41% 98%,
+                    40% 100%,
+                    38% 98%,
+                    36% 100%,
+                    34% 97%,
+                    31% 100%,
+                    30% 96%,
+                    28% 100%,
+                    26% 97%,
+                    25% 99%,
+                    23% 96%,
+                    22% 100%,
+                    20% 96%,
+                    18% 100%,
+                    15% 96%,
+                    13% 100%,
+                    11% 97%,
+                    8% 100%,
+                    7% 97%,
+                    4% 100%,
+                    3% 96%,
+                    0% 97%,
+                    2% 92%,
+                    0% 90%,
+                    2% 88%,
+                    0% 84%,
+                    2% 82%,
+                    0% 77%,
+                    2% 75%,
+                    0% 70%,
+                    2% 68%,
+                    0% 64%,
+                    3% 61%,
+                    0% 56%,
+                    3% 54%,
+                    0% 51%,
+                    3% 47%,
+                    0% 42%,
+                    4% 40%,
+                    0% 35%,
+                    5% 33%,
+                    1% 30%,
+                    0% 29%,
+                    3% 25%,
+                    0% 24%,
+                    3% 20%,
+                    0% 17%,
+                    1% 13%,
+                    0% 9%,
+                    2% 8%,
+                    0% 3%
+                );
             }
         }
     }
