--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -49,6 +49,9 @@
     height: 900px;
     width: 100%;
     height: 100%;
+    @include ipadPro {
+        height: calc(100% - 70px);
+    }
 }
 .game__errorWrapper{
     position: absolute;
