--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -207,7 +207,7 @@
     padding: 7px 16px;
     z-index: 4;
     h1{
-       margin-left: 30px;
+       margin-left: 11px;
     }
     &__icon{
         height: 100%;
@@ -216,5 +216,15 @@
     }
     @include ipadPro {
         display: flex;
+    }
+    &__content{
+        width: 100%;
+        height: 100px;
+        background-color: red;
+    }
+    &__item{
+        height: 100%;
+        width: 45%;
+        
     }
 }
